# rallybot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  WHATSAPP_BOT_SPEC.md  docker-compose.yml
config/: config.toml
crates/rallybot-api/: Cargo.toml
crates/rallybot-api/src/: lib.rs  main.rs  state.rs
crates/rallybot-api/src/handlers/: mod.rs  sessions.rs  users.rs  venues.rs
crates/rallybot-api/tests/: health_check.rs  registration.rs  sessions.rs  storage_implementations.rs  user_arrays.rs  venues.rs
crates/rallybot-api/tests/helpers/: config.rs  macros.rs  mod.rs
crates/rallybot-bot/: Cargo.toml
crates/rallybot-cli/: Cargo.toml
crates/rallybot-config/: Cargo.toml
crates/rallybot-core/: Cargo.toml
crates/rallybot-core/src/: lib.rs  models.rs  registration.rs  repository.rs  user.rs
crates/rallybot-core/src/repository/: generic.rs  mod.rs  traits.rs
crates/rallybot-core/src/services/: mod.rs  registration.rs  session.rs
crates/rallybot-core/src/storage/: in_memory.rs  mod.rs  postgres.rs  traits.rs
crates/rallybot-db/: Cargo.toml
crates/rallybot-error/: Cargo.toml
crates/rallybot-types/: Cargo.toml
crates/rallybot-utils/: Cargo.toml
migrations/: 20250627000001_create_venues.sql  20250627000002_create_users.sql  20250627000003_create_sessions.sql  20250627000004_create_registrations.sql  20250627192105_add_skill_level_to_sessions.sql
