[workspace]
members = [
    "crates/rallybot-core",
    "crates/rallybot-api",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
fake = { version = "2.9", features = ["derive"] }
rand = "0.8"