[package]
name = "rallybot-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rallybot-core = { path = "../rallybot-core" }
axum = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
rand = { workspace = true }
serial_test = { workspace = true }