[package]
name = "rallybot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
rand = { workspace = true }